livebook/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: livebook
  namespace: livebook
  labels:
    loadbalancer: cilium
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.127
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 8081
    targetPort: 8081
    name: iframe
  selector:
    app: livebook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: livebook
  namespace: livebook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: livebook
  template:
    metadata:
      labels:
        app: livebook
    spec:
      volumes:
        - name: livebook-vol
          persistentVolumeClaim:
            claimName: livebook-truenas-pvc
      containers:
      - name: livebook
        image: ghcr.io/livebook-dev/livebook:0.14.0
        ports:
          - containerPort: 80
          - containerPort: 8081
        volumeMounts:
          - mountPath: "/data"
            name: livebook-vol
---
