livebook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: livebook
  namespace: livebook
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - book.sushiraccoon.com
    secretName: livebook-tls
  rules:
  - host: book.sushiraccoon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: livebook
            port:
              number: 80
